# arquitetos-plugins

./: README.md
.claude-plugin/: marketplace.json
plugins/a2ui-shadcn-nextjs/: README.md
plugins/a2ui-shadcn-nextjs/.claude-plugin/: plugin.json
plugins/a2ui-shadcn-nextjs/agents/: a2ui-analyzer.md  a2ui-shadcn-architect.md  adapter-creator.md  shadcn-fixer.md  theme-designer.md
plugins/a2ui-shadcn-nextjs/commands/: a2ui-add.md  a2ui-analyze.md  a2ui-create.md  a2ui-design.md  a2ui-fix.md  a2ui-update.md
plugins/a2ui-shadcn-nextjs/workflows/: adapter-development.md  diagnose-and-fix.md  migration.md  project-setup.md  theme-customization.md
plugins/claude-swarm/: README.md
plugins/claude-swarm/.claude-plugin/: plugin.json
plugins/claude-swarm/agents/: swarm-orchestrator.md  swarm-worker-analyst.md  swarm-worker-coder.md  swarm-worker-researcher.md  swarm-worker-reviewer.md  swarm-worker-tester.md
plugins/claude-swarm/docker/: Dockerfile.agent  docker-compose.yml  entrypoint.sh
plugins/claude-swarm/python/: agents.py  main.py  orchestrator.py  swarm_mcp_server.py
plugins/claude-swarm/workflows/: map-reduce.yml
plugins/data-forge/: README.md
plugins/data-forge/.claude-plugin/: plugin.json
plugins/data-forge/agents/: data-connector.md  data-orchestrator.md  data-profiler.md  data-scientist.md  data-storyteller.md
plugins/evolution-whatsapp-business/: .env.example  .mcp.json  README.md
plugins/hybrid-kb-milvus-neo4j/: .mcp.json  README.md  docker-compose.yml
plugins/hybrid-kb-milvus-neo4j/agent-sdk/: Dockerfile  README.md  pyproject.toml
plugins/hybrid-kb-milvus-neo4j/agent-sdk/hybrid_kb/: __init__.py  agents.py  cli.py  orchestrator.py  skills.py  tools.py
plugins/hybrid-kb-milvus-neo4j/agent-sdk/knowledge_base_agent/: __init__.py  agent.py
plugins/hybrid-kb-milvus-neo4j/agent-sdk/knowledge_base_agent/core/: __init__.py  config.py  models.py
plugins/hybrid-kb-milvus-neo4j/agent-sdk/knowledge_base_agent/processing/: __init__.py  embeddings.py  file_processor.py  graph.py
plugins/hybrid-kb-milvus-neo4j/agent-sdk/knowledge_base_agent/storage/: __init__.py  manager.py
plugins/media-forge/: .mcp.json  README.md
plugins/ultra-arquiteto/: README.md
(+144 files in other folders)
