[project]
name = "hybrid-kb"
version = "1.0.0"
description = "Sistema multi-agente para GraphRAG com Milvus e Neo4j"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Arquitetos de Prompt", email = "gutomec@gmail.com"}
]
keywords = ["graphrag", "milvus", "neo4j", "rag", "agents", "claude"]

dependencies = [
    "anthropic>=0.40.0",
    "pymilvus>=2.5.0",
    "neo4j>=5.0.0",
    "google-generativeai>=0.8.0",
    "cohere>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
hybrid-kb = "hybrid_kb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
